# squam-lang

./: .gitignore  BUGS.md  Cargo.toml  Makefile  README.md
crates/: Cargo.toml
crates/squam/: Cargo.toml  README.md
crates/squam-compiler/: Cargo.toml  README.md
crates/squam-compiler/src/: bytecode.rs  compiler.rs  lib.rs  optimizer.rs
crates/squam-embed/: Cargo.toml  README.md
crates/squam-embed/src/: convert.rs  engine.rs  error.rs  lib.rs  macros.rs
crates/squam-lexer/: Cargo.toml  README.md
crates/squam-lexer/src/: lexer.rs  lib.rs  span.rs  token.rs
crates/squam-parser/: Cargo.toml  README.md
crates/squam-parser/src/: ast.rs  lib.rs  parser.rs  precedence.rs
crates/squam-stdlib/: Cargo.toml  README.md
crates/squam-stdlib/src/: box_type.rs  crypto.rs  fs.rs  hashmap.rs  hashset.rs  http.rs  io.rs  iter.rs  json.rs  lib.rs  math.rs  net.rs  option.rs  random.rs  result.rs  string.rs  time.rs  vec.rs
crates/squam-types/: Cargo.toml  README.md
crates/squam-types/src/: checker.rs  context.rs  lib.rs  scope.rs  types.rs
crates/squam-vm/: Cargo.toml  README.md
crates/squam-vm/src/: borrow.rs  executor.rs  gc.rs  inline_cache.rs  lib.rs  memory.rs  value.rs  vm.rs
crates/squam-wasm/: Cargo.toml  README.md
crates/squam-wasm/src/: lib.rs
crates/squam/benches/: benchmarks.rs
crates/squam/src/: lib.rs  main.rs
crates/squam/tests/: integration.rs
examples/: hello.squ  modules.squ  test.squ  traits.squ  webserver.squ
