[workspace]
resolver = "2"
members = [
    "squam",
    "squam-compiler",
    "squam-embed",
    "squam-lexer",
    "squam-parser",
    "squam-stdlib",
    "squam-types",
    "squam-vm",
    "squam-wasm",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Squam Contributors"]
description = "A statically-typed scripting language with full type inference"
homepage = "https://squ.am/"
keywords = ["language", "scripting", "interpreter", "compiler"]
categories = ["compilers", "development-tools"]

[workspace.dependencies]
# Internal
squam-lexer = { path = "squam-lexer" }
squam-parser = { path = "squam-parser" }
squam-types = { path = "squam-types" }
squam-compiler = { path = "squam-compiler" }
squam-vm = { path = "squam-vm" }
squam-stdlib = { path = "squam-stdlib", default-features = false }
squam-embed = { path = "squam-embed" }
squam-wasm = { path = "squam-wasm" }

# External
thiserror = "2"
logos = "0.14"
rustc-hash = "2"
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
rustyline = "14"
dirs = "5"