[package]
name = "squam-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedding API for the Squam scripting language"

[dependencies]
squam-lexer = { workspace = true }
squam-parser = { workspace = true }
squam-compiler = { workspace = true }
squam-vm = { workspace = true }
squam-stdlib = { workspace = true, features = ["http"] }
thiserror = { workspace = true }
