[package]
name = "squam-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
squam-vm = { workspace = true }
thiserror = { workspace = true }
lazy_static = "1.4"

[dev-dependencies]
squam-parser = { workspace = true }
squam-compiler = { workspace = true }