[package]
name = "squam-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for the Squam scripting language"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
squam-compiler = { workspace = true }
squam-parser = { workspace = true }
squam-vm = { workspace = true }
squam-stdlib = { workspace = true }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true