[package]
name = "squam"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Squam CLI"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "squam"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
squam-lexer = { workspace = true }
squam-parser = { workspace = true }
squam-types = { workspace = true }
squam-compiler = { workspace = true }
squam-vm = { workspace = true }
squam-stdlib = { workspace = true }
clap = { workspace = true }
ariadne = { workspace = true }
rustyline = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
criterion = "0.5"
